# lcg-mpc-plus-deadlock-recovery

./: .gitignore  GITHUB_UPLOAD_REPORT.md  README.md  pyproject.toml
configs/: batch_scale.yaml  final_manuscript_1000seed_core.yaml  final_manuscript_100seed_core.yaml  final_manuscript_20seed_core_repeat.yaml  final_validation_3seed_quick.yaml  final_validation_5seed.yaml  optimized_100seed.yaml  optimized_20seed.yaml  paper_1000seed_core_precheck_40run.yaml  paper_1000seed_core_resumable.yaml  paper_1000seed_core_v3.yaml  paper_1000seed_final.yaml  paper_1000seed_objective_final.yaml  paper_1000seed_objective_final_v2.yaml  paper_250robot_scalability_v3.yaml  paper_500_1000robot_smoke_v3.yaml  paper_ablation_100seed_v3.yaml  paper_fast_1000seed_core.yaml  paper_fast_1000seed_core_benchmark_3seed.yaml  paper_scale.yaml  pre1000_audit_20seed_main.yaml  pre1000_audit_ablation_10seed.yaml  pre1000_audit_runtime_scaling.yaml  pre1000_round2_ablation_30seed.yaml  pre1000_round2_second_audit_30seed.yaml  pre1000_v3_pilot_2seed.yaml  pre1000_v3_rehearsal_200seed.yaml  quick_100.yaml  stress_deadlock.yaml  visual_4way_5cases.yaml  visual_5cases.yaml  visual_compare.yaml
docs/: 100SEED_AND_VISUALIZATION_GUIDE.md  100SEED_VISUAL_RELEASE_NOTES.md  20SEED_OPTIMIZATION_REPORT.md  20SEED_OPTIMIZATION_RESULTS.json  FINAL_SCI_RELEASE_REPORT.md  FINAL_VALIDATION_QUICK_SUMMARY.csv  FINAL_VALIDATION_QUICK_SUMMARY.md  FORMULA_ALIGNMENT.md  KOREAN_COMMENT_UPDATE.md  KOREAN_COMMENT_VALIDATION.json  KOREAN_COMMENT_VALIDATION.md  KOREAN_GUIDE.md  UPGRADE_REPORT.md  VALIDATION_REPORT.md  (+3 more)
(+73 files in other folders)
