# 파일명: pyproject.toml
# 목적 및 역할:
# 패키지 이름, 의존성, 테스트와 코드 정리 도구 설정을 모아 둔다.
# 작성자: RODIX Anders Hwang

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-deadlock-thesis"
version = "0.1.0"
description = "Large-scale multi-robot deadlock simulation and CLRR-HMPC experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Research Draft"}]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
mpc = ["cvxpy>=1.4", "osqp>=0.6"]
dev = ["pytest>=7.0", "ruff>=0.4", "black>=24.0", "cvxpy>=1.4", "osqp>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
